# FM-Browser

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fm-browser.html  history_search_design.md  pyproject.toml  requirements-build.txt  server.py
.claude/: settings.json
.claude/memories/: architecture.md  project_overview.md
.github/workflows/: release.yml
agents/: classifier_builder.md  forensic_analyzer.md  pipeline_debugger.md
docs/: ACKNOWLEDGMENTS.md  API.md  CODEMAP.md  UI.md
history_search/: __init__.py  __main__.py  server.py
history_search/pipeline/: __init__.py  carve.py  classify.py  constants.py  enums.py  extract.py  index.py  ingest.py  models.py
history_search/static/: index.html
scripts/: build_zipapp.py  ingest.sh  setup.sh  test_pipeline.py
tests/: test_classify.py  test_e2e_server.py  test_index.py  test_ingest.py  test_pipeline_e2e.py
